--- a/jw-2204.html
+++ b/jw-2204.html
@@ -165,23 +165,23 @@
                     </ul>
                     <h4>OPTIONEEL BALBOA CONTROL SYSTEM:</h4>
                     <ul>
-                        <li>BP6013G3/BP2100G1+TP600: $200</li>
+                        <li>BP6013G3/BP2100G1+TP600</li>
                     </ul>
                     <button class="sluit-specificaties-knop" onclick="toggleSpecifications()">Sluiten</button>
                 </div>
 
                 <div class="options">
                     <h4>Opties:</h4>
-                    <label><input type="checkbox"> USA Aristech Acrylic: $200</label>
-                    <label><input type="checkbox"> Blower: $100 (BP6013G3/BP2100G1)</label>
-                    <label><input type="checkbox"> Bluetooth MP3 met speakers: $120</label>
-                    <label><input type="checkbox"> UV: $50</label>
-                    <label><input type="checkbox"> Heat preservation cover: $150</label>
-                    <label><input type="checkbox"> Cover lift: $150</label>
-                    <label><input type="checkbox"> Ladder: $60</label>
-                    <label><input type="checkbox"> Base: $150</label>
-                    <label><input type="checkbox"> WIFI Module (BP2100): $200</label>
-                    <label><input type="checkbox"> OPTIONAL BALBOA CONTROL SYSTEM: BP6013G3/BP2100G1+TP600: $200</label>
+                    <label><input type="checkbox"> USA Aristech Acrylic</label>
+                    <label><input type="checkbox"> Blower (BP6013G3/BP2100G1)</label>
+                    <label><input type="checkbox"> Bluetooth MP3 met speakers</label>
+                    <label><input type="checkbox"> UV</label>
+                    <label><input type="checkbox"> Heat preservation cover</label>
+                    <label><input type="checkbox"> Cover lift</label>
+                    <label><input type="checkbox"> Ladder</label>
+                    <label><input type="checkbox"> Base</label>
+                    <label><input type="checkbox"> WIFI Module (BP2100)</label>
+                    <label><input type="checkbox"> OPTIONAL BALBOA CONTROL SYSTEM: BP6013G3/BP2100G1+TP600</label>
                 </div>
 
                 <button class="offerte-aanvragen">Vraag nu een offerte aan!</button>
