--- a/jw-2206.html
+++ b/jw-2206.html
@@ -130,16 +130,19 @@
             </div>
             <div class="product-info">
                 <h3>Model NO: JW-2206</h3>
-                <p>Creëer uw eigen wellness-oase met de JW-2206 Jacuzzi. Deze luxe spa is ontworpen voor ultieme ontspanning en comfort, met ruimte voor vier personen (4 zitplaatsen).</p>
-                <p>De JW-2206 biedt een scala aan voordelen:</p>
+                <p>Ontsnap aan de Drukte met de JW-2206 Jacuzzi!</p>
+                <p>Ben je toe aan ultieme ontspanning en luxe in je eigen achtertuin? De JW-2206 Jacuzzi van AquaRelax.es is jouw ticket naar een oase van rust en comfort. Met ruimte voor vier personen is deze jacuzzi perfect voor gezellige momenten met familie en vrienden.</p>
+                <p>Waarom kiezen voor de JW-2206?</p>
                 <ul>
-                    <li><strong>Stressverlichting:</strong> Laat de spanning van de dag wegsmelten in het warme, bruisende water van de JW-2206. De hydromassagejets helpen spierspanning te verminderen en bevorderen een gevoel van diepe ontspanning.</li>
-                    <li><strong>Verbeterde Gezondheid:</strong> Regelmatig gebruik van deze jacuzzi kan de bloedsomloop verbeteren, pijnlijke spieren verlichten en zelfs helpen bij het verbeteren van uw slaapkwaliteit.</li>
-                    <li><strong>Sociale Verbinding:</strong> Creëer een gezellige ontmoetingsplek voor familie en vrienden. Geniet van quality time samen terwijl u ontspant in het warme water.</li>
-                    <li><strong>Luxe in Eigen Huis:</strong> Transformeer uw achtertuin in een privé-oase. De JW-2206 is ontworpen met oog voor detail en biedt een luxueuze uitstraling die elke buitenruimte verfraait.</li>
-                    <li><strong>Aanpasbare Ervaring:</strong> Met opties zoals LED-verlichting, Bluetooth-audio en geavanceerde besturingssystemen, kunt u uw jacuzzi-ervaring volledig personaliseren.</li>
-                    <li><strong>Kwaliteit en Duurzaamheid:</strong> AquaRelax.es gebruikt alleen hoogwaardige materialen en geavanceerde technologieën. De JW-2206 is gebouwd om lang mee te gaan, zodat u jarenlang kunt genieten van uw investering.</li>
+                    <li><strong>Ultieme Ontspanning:</strong> Laat de krachtige hydromassagejets je spieren verwennen en smelt de stress van de dag weg.</li>
+                    <li><strong>Gezondheidsvoordelen:</strong> Verbeter je bloedsomloop, verlicht spierpijn en geniet van een betere nachtrust.</li>
+                    <li><strong>Sociale Verbinding:</strong> Creëer een warme en uitnodigende plek voor samenzijn met dierbaren.</li>
+                    <li><strong>Luxe Design:</strong> Een stijlvolle toevoeging aan je buitenruimte, ontworpen met hoogwaardige materialen.</li>
+                    <li><strong>Aanpasbare Ervaring:</strong> Personaliseer je jacuzzi met optionele LED-verlichting, Bluetooth-audio en meer.</li>
+                    <li><strong>Kwaliteit en Duurzaamheid:</strong> Gebouwd om lang mee te gaan, zodat je jarenlang kunt genieten.</li>
                 </ul>
+                <p>Exclusieve Aanbieding!</p>
+                <p>Profiteer nu van onze speciale aanbieding en transformeer je achtertuin in een privé-spa. De JW-2206 Jacuzzi is tijdelijk beschikbaar met een exclusieve korting!</p>
 
                 <button class="specificaties-knop" onclick="toggleSpecifications()">Specificaties</button>
                 <div class="specificaties-venster">
@@ -166,24 +169,24 @@
                     </ul>
                     <h4>OPTIONEEL BALBOA CONTROL SYSTEM:</h4>
                     <ul>
-                        <li>BP6013G3/BP2100G1+TP600: $200</li>
+                        <li>BP6013G3/BP2100G1+TP600</li>
                     </ul>
                     <button class="sluit-specificaties-knop" onclick="toggleSpecifications()">Sluiten</button>
                 </div>
 
                 <div class="options">
                     <h4>Opties:</h4>
-                    <label><input type="checkbox"> USA Aristech Acrylic: $200</label>
-                    <label><input type="checkbox"> Blower: $100 (BP6013G3/BP2100G1)</label>
-                    <label><input type="checkbox"> Bluetooth MP3 met speakers: $120</label>
-                    <label><input type="checkbox"> Waterfall: $100</label>
-                    <label><input type="checkbox"> UV: $50</label>
-                    <label><input type="checkbox"> Heat preservation cover: $150</label>
-                    <label><input type="checkbox"> Cover lift: $150</label>
-                    <label><input type="checkbox"> Ladder: $60</label>
-                    <label><input type="checkbox"> Base: $150</label>
-                    <label><input type="checkbox"> WIFI Module (BP2100): $200</label>
-                    <label><input type="checkbox"> OPTIONAL BALBOA CONTROL SYSTEM: BP6013G3/BP2100G1+TP600: $200</label>
+                    <label><input type="checkbox"> USA Aristech Acrylic</label>
+                    <label><input type="checkbox"> Blower (BP6013G3/BP2100G1)</label>
+                    <label><input type="checkbox"> Bluetooth MP3 met speakers</label>
+                    <label><input type="checkbox"> Waterfall</label>
+                    <label><input type="checkbox"> UV</label>
+                    <label><input type="checkbox"> Heat preservation cover</label>
+                    <label><input type="checkbox"> Cover lift</label>
+                    <label><input type="checkbox"> Ladder</label>
+                    <label><input type="checkbox"> Base</label>
+                    <label><input type="checkbox"> WIFI Module (BP2100)</label>
+                    <label><input type="checkbox"> OPTIONAL BALBOA CONTROL SYSTEM: BP6013G3/BP2100G1+TP600</label>
                 </div>
 
                 <button class="offerte-aanvragen">Vraag nu een offerte aan!</button>
