--- a/jw-2209.html
+++ b/jw-2209.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JW-2205 - AquaRelax.es</title>
+    <title>JW-2209 - AquaRelax.es</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -120,57 +120,65 @@
 
     <main>
         <section class="product-details">
-            <h2>JW-2205 Jacuzzi</h2>
+            <h2>JW-2209 Jacuzzi</h2>
             <div class="image-gallery">
-                <img src="images/jw-2205-1.png" alt="JW-2205 Afbeelding 1" class="active">
-                <img src="images/jw-2205-2.png" alt="JW-2205 Afbeelding 2">
-                <img src="images/jw-2205-3.png" alt="JW-2205 Afbeelding 3">
+                <img src="images/jw-2209-1.png" alt="JW-2209 Afbeelding 1" class="active">
+                <img src="images/jw-2209-2.png" alt="JW-2209 Afbeelding 2">
                 <button class="prev-btn" onclick="prevImage()">Vorige</button>
                 <button class="next-btn" onclick="nextImage()">Volgende</button>
             </div>
             <div class="product-info">
-                <h3>Model NO: JW-2205</h3>
-                <p>Creëer uw eigen wellness-oase met de JW-2205 Jacuzzi. Deze luxe spa is ontworpen voor ultieme ontspanning en comfort, met ruimte voor vijf personen (3 zitplaatsen + 2 lounges).</p>
-                <p>De JW-2205 biedt een scala aan voordelen:</p>
+                <h3>Model NO: JW-2209</h3>
+                <p>Geniet van Ongekend Comfort met de JW-2209 Jacuzzi!</p>
+                <p>Ben je op zoek naar een manier om te ontsnappen aan de hectiek van het dagelijks leven? De JW-2209 Jacuzzi van AquaRelax.es biedt de ultieme ontspanning en luxe. Met ruimte voor 8-12 personen is deze jacuzzi perfect voor zowel individueel gebruik als gezellige momenten met vrienden en familie.</p>
+                <p>Waarom kiezen voor de JW-2209?</p>
                 <ul>
-                    <li><strong>Stressverlichting:</strong> Laat de spanning van de dag wegsmelten in het warme, bruisende water van de JW-2205. De hydromassagejets helpen spierspanning te verminderen en bevorderen een gevoel van diepe ontspanning.</li>
-                    <li><strong>Verbeterde Gezondheid:</strong> Regelmatig gebruik van deze jacuzzi kan de bloedsomloop verbeteren, pijnlijke spieren verlichten en zelfs helpen bij het verbeteren van uw slaapkwaliteit.</li>
-                    <li><strong>Sociale Verbinding:</strong> Creëer een gezellige ontmoetingsplek voor familie en vrienden. Geniet van quality time samen terwijl u ontspant in het warme water.</li>
-                    <li><strong>Luxe in Eigen Huis:</strong> Transformeer uw achtertuin in een privé-oase. De JW-2205 is ontworpen met oog voor detail en biedt een luxueuze uitstraling die elke buitenruimte verfraait.</li>
-                    <li><strong>Aanpasbare Ervaring:</strong> Met opties zoals LED-verlichting, Bluetooth-audio en geavanceerde besturingssystemen, kunt u uw jacuzzi-ervaring volledig personaliseren.</li>
-                    <li><strong>Kwaliteit en Duurzaamheid:</strong> AquaRelax.es gebruikt alleen hoogwaardige materialen en geavanceerde technologieën. De JW-2205 is gebouwd om lang mee te gaan, zodat u jarenlang kunt genieten van uw investering.</li>
+                    <li><strong>Ultieme Ontspanning:</strong> Laat je spieren verwennen door de krachtige hydromassagejets en voel de stress van je afglijden.</li>
+                    <li><strong>Gezondheidsvoordelen:</strong> Verbeter je bloedsomloop, verlicht spierpijn en geniet van een diepere, herstellende slaap.</li>
+                    <li><strong>Sociale Verbinding:</strong> Creëer een uitnodigende ruimte voor samenzijn met vrienden en familie.</li>
+                    <li><strong>Luxe Ontwerp:</strong> Voeg een vleugje elegantie toe aan je buitenruimte met deze stijlvol ontworpen jacuzzi.</li>
+                    <li><strong>Aanpasbare Ervaring:</strong> Personaliseer je jacuzzi met opties zoals LED-verlichting, Bluetooth-audio en meer.</li>
+                    <li><strong>Kwaliteit en Duurzaamheid:</strong> Gebouwd met hoogwaardige materialen om jarenlang mee te gaan, zodat je kunt blijven genieten van je investering.</li>
                 </ul>
+                <p>Exclusieve Aanbieding!</p>
+                <p>Profiteer nu van onze speciale aanbieding en maak van je achtertuin een privé-spa. De JW-2209 Jacuzzi is tijdelijk beschikbaar met een exclusieve korting!</p>
 
                 <button class="specificaties-knop" onclick="toggleSpecifications()">Specificaties</button>
                 <div class="specificaties-venster">
                     <h4>SPECIFICATIES:</h4>
                     <ul>
-                        <li>Afmetingen: 2000*2000*890mm</li>
-                        <li>Watercapaciteit: 1160L</li>
-                        <li>Capaciteit: 5 personen (3 zitplaatsen + 2 lounges)</li>
+                        <li>Afmetingen: 5800*2200*1400mm</li>
+                        <li>Watercapaciteit: 1500L+5900L</li>
+                        <li>Capaciteit: 8-12 personen (5 zitplaatsen + 2 lounges + 1 zwembad)</li>
                         <li>Elektrisch: 110-380V, 50hz/60hz</li>
-                        <li>Besturingssysteem: USA Balboa BP200G1+TP500</li>
-                        <li>Verwarming: USA Balboa 1PC</li>
-                        <li>Massagepomp: 3HP *1pc</li>
-                        <li>Circulatiepomp: 1pc</li>
-                        <li>Totaal aantal jets: 43pcs (304 roestvrij staal)</li>
-                        <li>5” hydrotherapiejets: 1pc</li>
-                        <li>5” jets (rotatie *6 + direct *6): 12pcs</li>
-                        <li>3.5” jets (rotatie *2 + direct *3): 5pcs</li>
-                        <li>2.5” jets (rotatie *8 + direct *8): 16pcs</li>
-                        <li>1” hydrotherapiejets: 9pcs</li>
+                        <li>Besturingssysteem: USA Balboa BP6013G1 X2 +TP600X2</li>
+                        <li>Verwarming: USA Balboa 2PCS</li>
+                        <li>Circulatiepomp: 2PCS</li>
+                        <li>Massagepomp: SEAT SPA: 3HP *1pc 2HP*1pc, SWIMMING: 3HP*3pcs 2HP*1pc</li>
+                        <li>Totaal aantal jets: 89pcs (304 roestvrij staal)</li>
+                        <li>Spa deel:</li>
+                        <ul>
+                            <li>4” jets: 1pc</li>
+                            <li>3” jets: 16pcs</li>
+                            <li>1" jets: 43pcs</li>
+                        </ul>
+                        <li>Zwembad deel:</li>
+                        <ul>
+                            <li>7" jets: 3pcs</li>
+                            <li>4" jets: 2pcs</li>
+                            <li>3" jets: 6pcs</li>
+                            <li>1" jets: 18pcs</li>
+                        </ul>
                         <li>Constructie: Acryl kuip, PS-omlijsting, roestvrijstalen frame</li>
-                        <li>Filter: 1PC</li>
-                        <li>Ozonizer: 1pc</li>
-                        <li>Perimeter LED-verlichting: 24pcs</li>
-                        <li>Sprayverlichting: 8pcs</li>
-                        <li>LED bekerhouder: 2pcs</li>
-                        <li>EVA hoofdkussen: 3pcs</li>
-                        <li>Onderwaterverlichting: 5"*1pc</li>
-                        <li>Luchtklep: 4pcs</li>
-                        <li>Waterverdeler: 1pc</li>
-                        <li>Waterval: 1pc</li>
-                        <li>2.5" pop-up fontein: 2pcs</li>
+                        <li>Filter: 2PC</li>
+                        <li>Ozonizer: 2pcs</li>
+                        <li>Perimeter LED-verlichting: 34pcs</li>
+                        <li>LED bekerhouder: 4pcs</li>
+                        <li>EVA hoofdkussen: 5pcs</li>
+                        <li>Onderwaterverlichting: 5"*2pc</li>
+                        <li>Luchtklep: 6pcs</li>
+                        <li>Waterverdeler: 2pc</li>
+                        <li>Fontein: 3pcs</li>
                     </ul>
                     <h4>OPTIONEEL BALBOA CONTROL SYSTEM:</h4>
                     <ul>
@@ -190,6 +198,7 @@
                     <label><input type="checkbox"> Ladder</label>
                     <label><input type="checkbox"> Base</label>
                     <label><input type="checkbox"> WIFI Module (BP2100)</label>
+                    <label><input type="checkbox"> Sand filter</label>
                     <label><input type="checkbox"> OPTIONAL BALBOA CONTROL SYSTEM: BP6013G3/BP2100G1+TP600</label>
                 </div>
 
