--- a/jw-2211.html
+++ b/jw-2211.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JW-2205 - AquaRelax.es</title>
+    <title>JW-2211 - AquaRelax.es</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -120,57 +120,54 @@
 
     <main>
         <section class="product-details">
-            <h2>JW-2205 Jacuzzi</h2>
+            <h2>JW-2211 Jacuzzi</h2>
             <div class="image-gallery">
-                <img src="images/jw-2205-1.png" alt="JW-2205 Afbeelding 1" class="active">
-                <img src="images/jw-2205-2.png" alt="JW-2205 Afbeelding 2">
-                <img src="images/jw-2205-3.png" alt="JW-2205 Afbeelding 3">
+                <img src="images/jw-2211-1.png" alt="JW-2211 Afbeelding 1" class="active">
+                <img src="images/jw-2211-2.png" alt="JW-2211 Afbeelding 2">
+                <img src="images/jw-2211-3.png" alt="JW-2211 Afbeelding 3">
                 <button class="prev-btn" onclick="prevImage()">Vorige</button>
                 <button class="next-btn" onclick="nextImage()">Volgende</button>
             </div>
             <div class="product-info">
-                <h3>Model NO: JW-2205</h3>
-                <p>Creëer uw eigen wellness-oase met de JW-2205 Jacuzzi. Deze luxe spa is ontworpen voor ultieme ontspanning en comfort, met ruimte voor vijf personen (3 zitplaatsen + 2 lounges).</p>
-                <p>De JW-2205 biedt een scala aan voordelen:</p>
+                <h3>Model NO: JW-2211</h3>
+                <p>Ervaar Ongekende Luxe met de JW-2211 Jacuzzi!</p>
+                <p>Op zoek naar een manier om te ontsnappen aan de drukte van het dagelijks leven? De JW-2211 Jacuzzi van AquaRelax.es biedt je de ultieme ontspanning en comfort. Met ruimte voor acht personen is deze jacuzzi perfect voor zowel individuele ontspanning als gezellige momenten met vrienden en familie.</p>
+                <p>Waarom kiezen voor de JW-2211?</p>
                 <ul>
-                    <li><strong>Stressverlichting:</strong> Laat de spanning van de dag wegsmelten in het warme, bruisende water van de JW-2205. De hydromassagejets helpen spierspanning te verminderen en bevorderen een gevoel van diepe ontspanning.</li>
-                    <li><strong>Verbeterde Gezondheid:</strong> Regelmatig gebruik van deze jacuzzi kan de bloedsomloop verbeteren, pijnlijke spieren verlichten en zelfs helpen bij het verbeteren van uw slaapkwaliteit.</li>
-                    <li><strong>Sociale Verbinding:</strong> Creëer een gezellige ontmoetingsplek voor familie en vrienden. Geniet van quality time samen terwijl u ontspant in het warme water.</li>
-                    <li><strong>Luxe in Eigen Huis:</strong> Transformeer uw achtertuin in een privé-oase. De JW-2205 is ontworpen met oog voor detail en biedt een luxueuze uitstraling die elke buitenruimte verfraait.</li>
-                    <li><strong>Aanpasbare Ervaring:</strong> Met opties zoals LED-verlichting, Bluetooth-audio en geavanceerde besturingssystemen, kunt u uw jacuzzi-ervaring volledig personaliseren.</li>
-                    <li><strong>Kwaliteit en Duurzaamheid:</strong> AquaRelax.es gebruikt alleen hoogwaardige materialen en geavanceerde technologieën. De JW-2205 is gebouwd om lang mee te gaan, zodat u jarenlang kunt genieten van uw investering.</li>
+                    <li><strong>Ultieme Ontspanning:</strong> Geniet van de krachtige hydromassagejets die je spieren verwennen en de stress van de dag wegsmelten.</li>
+                    <li><strong>Gezondheidsvoordelen:</strong> Verbeter je bloedsomloop, verlicht spierpijn en geniet van een diepere, herstellende slaap.</li>
+                    <li><strong>Sociale Verbinding:</strong> Creëer een uitnodigende ruimte voor samenzijn met vrienden en familie.</li>
+                    <li><strong>Luxe Ontwerp:</strong> Voeg een vleugje elegantie toe aan je buitenruimte met deze stijlvol ontworpen jacuzzi.</li>
+                    <li><strong>Aanpasbare Ervaring:</strong> Personaliseer je jacuzzi met opties zoals LED-verlichting, Bluetooth-audio en meer.</li>
+                    <li><strong>Kwaliteit en Duurzaamheid:</strong> Gebouwd met hoogwaardige materialen om jarenlang mee te gaan, zodat je kunt blijven genieten van je investering.</li>
                 </ul>
+                <p>Exclusieve Aanbieding!</p>
+                <p>Profiteer nu van onze speciale aanbieding en maak van je achtertuin een privé-spa. De JW-2211 Jacuzzi is tijdelijk beschikbaar met een exclusieve korting!</p>
 
                 <button class="specificaties-knop" onclick="toggleSpecifications()">Specificaties</button>
                 <div class="specificaties-venster">
                     <h4>SPECIFICATIES:</h4>
                     <ul>
-                        <li>Afmetingen: 2000*2000*890mm</li>
-                        <li>Watercapaciteit: 1160L</li>
-                        <li>Capaciteit: 5 personen (3 zitplaatsen + 2 lounges)</li>
+                        <li>Afmetingen: 2500*2200*950mm</li>
+                        <li>Watercapaciteit: 1610L</li>
+                        <li>Capaciteit: 8 personen (7 zitplaatsen + 1 lounge)</li>
                         <li>Elektrisch: 110-380V, 50hz/60hz</li>
-                        <li>Besturingssysteem: USA Balboa BP200G1+TP500</li>
+                        <li>Besturingssysteem: USA Balboa BP6013G3+TP600</li>
                         <li>Verwarming: USA Balboa 1PC</li>
-                        <li>Massagepomp: 3HP *1pc</li>
-                        <li>Circulatiepomp: 1pc</li>
-                        <li>Totaal aantal jets: 43pcs (304 roestvrij staal)</li>
-                        <li>5” hydrotherapiejets: 1pc</li>
-                        <li>5” jets (rotatie *6 + direct *6): 12pcs</li>
-                        <li>3.5” jets (rotatie *2 + direct *3): 5pcs</li>
-                        <li>2.5” jets (rotatie *8 + direct *8): 16pcs</li>
-                        <li>1” hydrotherapiejets: 9pcs</li>
+                        <li>Massagepomp: 3HP *3pcs</li>
+                        <li>Totaal aantal jets: 99pcs (304 roestvrij staal)</li>
+                        <li>3.5” jets (rotatie *5 + direct *2): 7pcs</li>
+                        <li>2.5” jets (rotatie *12 + direct *6): 18pcs</li>
+                        <li>1” hydrotherapiejets: 74pcs</li>
                         <li>Constructie: Acryl kuip, PS-omlijsting, roestvrijstalen frame</li>
                         <li>Filter: 1PC</li>
                         <li>Ozonizer: 1pc</li>
-                        <li>Perimeter LED-verlichting: 24pcs</li>
-                        <li>Sprayverlichting: 8pcs</li>
-                        <li>LED bekerhouder: 2pcs</li>
-                        <li>EVA hoofdkussen: 3pcs</li>
+                        <li>Perimeter LED-verlichting: 18pcs</li>
+                        <li>EVA hoofdkussen: 5pcs</li>
                         <li>Onderwaterverlichting: 5"*1pc</li>
-                        <li>Luchtklep: 4pcs</li>
-                        <li>Waterverdeler: 1pc</li>
-                        <li>Waterval: 1pc</li>
-                        <li>2.5" pop-up fontein: 2pcs</li>
+                        <li>Luchtklep: 5pcs</li>
+                        <li>Waterverdeler: 2pcs</li>
+                        <li>Fontein: 3pcs</li>
                     </ul>
                     <h4>OPTIONEEL BALBOA CONTROL SYSTEM:</h4>
                     <ul>
@@ -182,7 +179,7 @@
                 <div class="options">
                     <h4>Opties:</h4>
                     <label><input type="checkbox"> USA Aristech Acrylic</label>
-                    <label><input type="checkbox"> Blower (BP6013G3/BP2100G1)</label>
+                    <label><input type="checkbox"> Blower</label>
                     <label><input type="checkbox"> Bluetooth MP3 met speakers</label>
                     <label><input type="checkbox"> UV</label>
                     <label><input type="checkbox"> Heat preservation cover</label>
