--- a/jw-2203.html
+++ b/jw-2203.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JW-2205 - AquaRelax.es</title>
+    <title>JW-2203 - AquaRelax.es</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
         header {
+            display: flex;
+            align-items: center;
+            padding: 10px;
             background-color: #007bff;
             color: white;
-            padding: 10px 0;
-            text-align: center;
         }
         .logo {
-            max-width: 150px;
-            display: block;
-            margin: 0 auto;
+            max-width: 200px;
+            height: auto;
+            margin-right: 20px;
+        }
+        nav {
+            text-align: center;
         }
         nav a {
             color: white;
@@ -110,9 +111,8 @@
         <h1>AquaRelax.es</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="zwemspas.html">Zwemspas</a>
-            <a href="jacuzzis.html">Jacuzzi's</a>
-            <a href="ijsbaden.html">IJsbaden</a>
+            <a href="index.html#zwemspas">Zwemspas</a>
+            <a href="index.html#jacuzzis">Jacuzzi's</a>
             <a href="over-ons.html">Over Ons</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -120,77 +120,80 @@
 
     <main>
         <section class="product-details">
-            <h2>JW-2205 Jacuzzi</h2>
+            <h2>JW-2203</h2>
             <div class="image-gallery">
-                <img src="images/jw-2205-1.png" alt="JW-2205 Afbeelding 1" class="active">
-                <img src="images/jw-2205-2.png" alt="JW-2205 Afbeelding 2">
-                <img src="images/jw-2205-3.png" alt="JW-2205 Afbeelding 3">
+                <img src="images/jw-2203_1.png" alt="JW-2203 Afbeelding 1" class="active">
+                <img src="images/jw-2203_2.png" alt="JW-2203 Afbeelding 2">
+                <img src="images/jw-2203_3.png" alt="JW-2203 Afbeelding 3">
                 <button class="prev-btn" onclick="prevImage()">Vorige</button>
                 <button class="next-btn" onclick="nextImage()">Volgende</button>
             </div>
             <div class="product-info">
-                <h3>Model NO: JW-2205</h3>
-                <p>Creëer uw eigen wellness-oase met de JW-2205 Jacuzzi. Deze luxe spa is ontworpen voor ultieme ontspanning en comfort, met ruimte voor vijf personen (3 zitplaatsen + 2 lounges).</p>
-                <p>De JW-2205 biedt een scala aan voordelen:</p>
-                <ul>
-                    <li><strong>Stressverlichting:</strong> Laat de spanning van de dag wegsmelten in het warme, bruisende water van de JW-2205. De hydromassagejets helpen spierspanning te verminderen en bevorderen een gevoel van diepe ontspanning.</li>
-                    <li><strong>Verbeterde Gezondheid:</strong> Regelmatig gebruik van deze jacuzzi kan de bloedsomloop verbeteren, pijnlijke spieren verlichten en zelfs helpen bij het verbeteren van uw slaapkwaliteit.</li>
-                    <li><strong>Sociale Verbinding:</strong> Creëer een gezellige ontmoetingsplek voor familie en vrienden. Geniet van quality time samen terwijl u ontspant in het warme water.</li>
-                    <li><strong>Luxe in Eigen Huis:</strong> Transformeer uw achtertuin in een privé-oase. De JW-2205 is ontworpen met oog voor detail en biedt een luxueuze uitstraling die elke buitenruimte verfraait.</li>
-                    <li><strong>Aanpasbare Ervaring:</strong> Met opties zoals LED-verlichting, Bluetooth-audio en geavanceerde besturingssystemen, kunt u uw jacuzzi-ervaring volledig personaliseren.</li>
-                    <li><strong>Kwaliteit en Duurzaamheid:</strong> AquaRelax.es gebruikt alleen hoogwaardige materialen en geavanceerde technologieën. De JW-2205 is gebouwd om lang mee te gaan, zodat u jarenlang kunt genieten van uw investering.</li>
-                </ul>
+                <h3>Creëer uw Eigen Wellness-Oase met de JW-2203 Jacuzzi</h3>
+                <p>
+                    Verlangt u naar een plek waar u kunt ontsnappen aan de dagelijkse stress en kunt genieten van pure ontspanning? De JW-2203 jacuzzi is uw antwoord. Deze luxe spa transformeert uw tuin tot een privé wellness-oase, waar u alleen of samen met vrienden en familie kunt genieten van de ultieme ontspanning.
+                </p>
+                <p>
+                    Stelt u zich eens voor: u zakt weg in het warme, bruisende water, omringd door het zachte licht van de onderwaterlamp en de sfeervolle perimeter LED-verlichting. De 56 strategisch geplaatste roestvrijstalen jets masseren uw lichaam van top tot teen, verlichten spierpijn en laten alle spanning verdwijnen. Met twee comfortabele zitplaatsen en een ruime lounge is er plaats voor iedereen om te genieten.
+                </p>
+                <p>
+                    Het geavanceerde Balboa-besturingssysteem, bekend om zijn gebruiksvriendelijkheid, stelt u in staat om de temperatuur, de jets en andere functies eenvoudig aan te passen. Zo creëert u altijd de perfecte spa-ervaring, afgestemd op uw persoonlijke wensen.
+                </p>
+                <p>
+                    De JW-2203 is meer dan alleen een jacuzzi; het is een investering in uw gezondheid en welzijn. Regelmatig gebruik van een jacuzzi heeft bewezen stress te verminderen, spierpijn te verlichten, de bloedsomloop te verbeteren en zelfs de slaapkwaliteit te bevorderen. Gun uzelf de luxe van ontspanning en ervaar de vele voordelen van de JW-2203.
+                </p>
+                <p>
+                    Personaliseer uw spa-ervaring met diverse opties, zoals een Bluetooth-muzieksysteem om uw favoriete muziek af te spelen, een UV-systeem voor kristalhelder water, een isolerende hoes om de warmte vast te houden en nog veel meer. Creëer de perfecte spa-ervaring die bij u past.
+                </p>
+                <p>
+                    Wacht niet langer en transformeer uw tuin in een oase van rust en welzijn. Vraag nu een offerte aan voor de JW-2203 en begin met genieten van de vele voordelen die deze luxe jacuzzi te bieden heeft. Ons team staat klaar om al uw vragen te beantwoorden en u te helpen bij het kiezen van de perfecte jacuzzi voor uw behoeften.
+                </p>
 
                 <button class="specificaties-knop" onclick="toggleSpecifications()">Specificaties</button>
                 <div class="specificaties-venster">
-                    <h4>SPECIFICATIES:</h4>
+                    <h4>Specificaties:</h4>
                     <ul>
-                        <li>Afmetingen: 2000*2000*890mm</li>
-                        <li>Watercapaciteit: 1160L</li>
-                        <li>Capaciteit: 5 personen (3 zitplaatsen + 2 lounges)</li>
+                        <li>Afmetingen: 2100*1580*780mm</li>
+                        <li>Watercapaciteit: 850L</li>
+                        <li>Capaciteit: 3 personen (2 zitplaatsen + 1 lounge)</li>
                         <li>Elektrisch: 110-380V, 50hz/60hz</li>
                         <li>Besturingssysteem: USA Balboa BP200G1+TP500</li>
                         <li>Verwarming: USA Balboa 1PC</li>
-                        <li>Massagepomp: 3HP *1pc</li>
+                        <li>Massagepomp: 3HP * 1pc</li>
                         <li>Circulatiepomp: 1pc</li>
-                        <li>Totaal aantal jets: 43pcs (304 roestvrij staal)</li>
+                        <li>Jets: 56 roestvrijstalen jets</li>
                         <li>5” hydrotherapiejets: 1pc</li>
-                        <li>5” jets (rotatie *6 + direct *6): 12pcs</li>
-                        <li>3.5” jets (rotatie *2 + direct *3): 5pcs</li>
-                        <li>2.5” jets (rotatie *8 + direct *8): 16pcs</li>
-                        <li>1” hydrotherapiejets: 9pcs</li>
+                        <li>5” jets (rotational *2 + direct *6): 8pcs</li>
+                        <li>3.5” jets (rotational *1 + direct *4): 5pcs</li>
+                        <li>2.5” jets: 10pcs</li>
+                        <li>1” hydrotherapiejets: 32pcs</li>
                         <li>Constructie: Acryl kuip, PS-omlijsting, roestvrijstalen frame</li>
                         <li>Filter: 1PC</li>
                         <li>Ozonizer: 1pc</li>
                         <li>Perimeter LED-verlichting: 24pcs</li>
-                        <li>Sprayverlichting: 8pcs</li>
-                        <li>LED bekerhouder: 2pcs</li>
-                        <li>EVA hoofdkussen: 3pcs</li>
-                        <li>Onderwaterverlichting: 5"*1pc</li>
-                        <li>Luchtklep: 4pcs</li>
-                        <li>Waterverdeler: 1pc</li>
-                        <li>Waterval: 1pc</li>
-                        <li>2.5" pop-up fontein: 2pcs</li>
-                    </ul>
-                    <h4>OPTIONEEL BALBOA CONTROL SYSTEM:</h4>
-                    <ul>
-                        <li>BP6013G3/BP2100G1+TP600</li>
+                        <li>Spray lights: 8pcs</li>
+                        <li>EVA Headrest: 2pcs</li>
+                        <li>Onderwaterlamp: 5" * 1pc</li>
+                        <li>Air valve: 2pcs</li>
+                        <li>Water Segregator: 1pc</li>
+                        <li>Waterfall: 1pc</li>
+                        <li>2.5" pop-up fountain: 3pcs</li>
+                        <li>OPTIONAL BALBOA CONTROL SYSTEM: BP6013G3/BP2100G1+TP600</li>
                     </ul>
                     <button class="sluit-specificaties-knop" onclick="toggleSpecifications()">Sluiten</button>
                 </div>
 
                 <div class="options">
                     <h4>Opties:</h4>
-                    <label><input type="checkbox"> USA Aristech Acrylic</label>
+                    <label><input type="checkbox"> USA Aristech Acryl</label>
                     <label><input type="checkbox"> Blower (BP6013G3/BP2100G1)</label>
                     <label><input type="checkbox"> Bluetooth MP3 met speakers</label>
                     <label><input type="checkbox"> UV</label>
-                    <label><input type="checkbox"> Heat preservation cover</label>
-                    <label><input type="checkbox"> Cover lift</label>
+                    <label><input type="checkbox"> Isolatiehoes</label>
+                    <label><input type="checkbox"> Coverlift</label>
                     <label><input type="checkbox"> Ladder</label>
-                    <label><input type="checkbox"> Base</label>
+                    <label><input type="checkbox"> Basis</label>
                     <label><input type="checkbox"> WIFI Module (BP2100)</label>
-                    <label><input type="checkbox"> OPTIONAL BALBOA CONTROL SYSTEM: BP6013G3/BP2100G1+TP600</label>
                 </div>
 
                 <button class="offerte-aanvragen">Vraag nu een offerte aan!</button>
