--- a/jw-2212.html
+++ b/jw-2212.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JW-2205 - AquaRelax.es</title>
+    <title>JW-2212 - AquaRelax.es</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -120,57 +120,54 @@
 
     <main>
         <section class="product-details">
-            <h2>JW-2205 Jacuzzi</h2>
+            <h2>JW-2212 Jacuzzi</h2>
             <div class="image-gallery">
-                <img src="images/jw-2205-1.png" alt="JW-2205 Afbeelding 1" class="active">
-                <img src="images/jw-2205-2.png" alt="JW-2205 Afbeelding 2">
-                <img src="images/jw-2205-3.png" alt="JW-2205 Afbeelding 3">
+                <img src="images/jw-2212-1.png" alt="JW-2212 Afbeelding 1" class="active">
+                <img src="images/jw-2212-2.png" alt="JW-2212 Afbeelding 2">
+                <img src="images/jw-2212-3.png" alt="JW-2212 Afbeelding 3">
                 <button class="prev-btn" onclick="prevImage()">Vorige</button>
                 <button class="next-btn" onclick="nextImage()">Volgende</button>
             </div>
             <div class="product-info">
-                <h3>Model NO: JW-2205</h3>
-                <p>Creëer uw eigen wellness-oase met de JW-2205 Jacuzzi. Deze luxe spa is ontworpen voor ultieme ontspanning en comfort, met ruimte voor vijf personen (3 zitplaatsen + 2 lounges).</p>
-                <p>De JW-2205 biedt een scala aan voordelen:</p>
+                <h3>Model NO: JW-2212</h3>
+                <p>Ontsnap aan de Drukte met de JW-2212 Jacuzzi!</p>
+                <p>Ben je toe aan ultieme ontspanning en luxe in je eigen achtertuin? De JW-2212 Jacuzzi van AquaRelax.es is jouw ticket naar een oase van rust en comfort. Met ruimte voor zes personen is deze jacuzzi perfect voor gezellige momenten met familie en vrienden.</p>
+                <p>Waarom kiezen voor de JW-2212?</p>
                 <ul>
-                    <li><strong>Stressverlichting:</strong> Laat de spanning van de dag wegsmelten in het warme, bruisende water van de JW-2205. De hydromassagejets helpen spierspanning te verminderen en bevorderen een gevoel van diepe ontspanning.</li>
-                    <li><strong>Verbeterde Gezondheid:</strong> Regelmatig gebruik van deze jacuzzi kan de bloedsomloop verbeteren, pijnlijke spieren verlichten en zelfs helpen bij het verbeteren van uw slaapkwaliteit.</li>
-                    <li><strong>Sociale Verbinding:</strong> Creëer een gezellige ontmoetingsplek voor familie en vrienden. Geniet van quality time samen terwijl u ontspant in het warme water.</li>
-                    <li><strong>Luxe in Eigen Huis:</strong> Transformeer uw achtertuin in een privé-oase. De JW-2205 is ontworpen met oog voor detail en biedt een luxueuze uitstraling die elke buitenruimte verfraait.</li>
-                    <li><strong>Aanpasbare Ervaring:</strong> Met opties zoals LED-verlichting, Bluetooth-audio en geavanceerde besturingssystemen, kunt u uw jacuzzi-ervaring volledig personaliseren.</li>
-                    <li><strong>Kwaliteit en Duurzaamheid:</strong> AquaRelax.es gebruikt alleen hoogwaardige materialen en geavanceerde technologieën. De JW-2205 is gebouwd om lang mee te gaan, zodat u jarenlang kunt genieten van uw investering.</li>
+                    <li><strong>Ultieme Ontspanning:</strong> Laat de krachtige hydromassagejets je spieren verwennen en smelt de stress van de dag weg.</li>
+                    <li><strong>Gezondheidsvoordelen:</strong> Verbeter je bloedsomloop, verlicht spierpijn en geniet van een betere nachtrust.</li>
+                    <li><strong>Sociale Verbinding:</strong> Creëer een warme en uitnodigende plek voor samenzijn met dierbaren.</li>
+                    <li><strong>Luxe Design:</strong> Een stijlvolle toevoeging aan je buitenruimte, ontworpen met hoogwaardige materialen.</li>
+                    <li><strong>Aanpasbare Ervaring:</strong> Personaliseer je jacuzzi met optionele LED-verlichting, Bluetooth-audio en meer.</li>
+                    <li><strong>Kwaliteit en Duurzaamheid:</strong> Gebouwd om lang mee te gaan, zodat je jarenlang kunt genieten.</li>
                 </ul>
+                <p>Exclusieve Aanbieding!</p>
+                <p>Profiteer nu van onze speciale aanbieding en transformeer je achtertuin in een privé-spa. De JW-2212 Jacuzzi is tijdelijk beschikbaar met een exclusieve korting!</p>
 
                 <button class="specificaties-knop" onclick="toggleSpecifications()">Specificaties</button>
                 <div class="specificaties-venster">
                     <h4>SPECIFICATIES:</h4>
                     <ul>
-                        <li>Afmetingen: 2000*2000*890mm</li>
-                        <li>Watercapaciteit: 1160L</li>
-                        <li>Capaciteit: 5 personen (3 zitplaatsen + 2 lounges)</li>
+                        <li>Afmetingen: 2100*2100*880mm</li>
+                        <li>Watercapaciteit: 1250L</li>
+                        <li>Capaciteit: 6 personen (5 zitplaatsen + 1 lounge)</li>
                         <li>Elektrisch: 110-380V, 50hz/60hz</li>
-                        <li>Besturingssysteem: USA Balboa BP200G1+TP500</li>
+                        <li>Besturingssysteem: USA Balboa BP6013G1+TP600</li>
                         <li>Verwarming: USA Balboa 1PC</li>
-                        <li>Massagepomp: 3HP *1pc</li>
-                        <li>Circulatiepomp: 1pc</li>
-                        <li>Totaal aantal jets: 43pcs (304 roestvrij staal)</li>
-                        <li>5” hydrotherapiejets: 1pc</li>
-                        <li>5” jets (rotatie *6 + direct *6): 12pcs</li>
-                        <li>3.5” jets (rotatie *2 + direct *3): 5pcs</li>
-                        <li>2.5” jets (rotatie *8 + direct *8): 16pcs</li>
-                        <li>1” hydrotherapiejets: 9pcs</li>
+                        <li>Massagepomp: 3HP *2pcs</li>
+                        <li>Totaal aantal jets: 51pcs (304 roestvrij staal)</li>
+                        <li>3.5” jets (rotatie *3 + direct *4): 7pcs</li>
+                        <li>2.5” jets (rotatie *6 + direct *14): 20pcs</li>
+                        <li>1” hydrotherapiejets: 24pcs</li>
                         <li>Constructie: Acryl kuip, PS-omlijsting, roestvrijstalen frame</li>
                         <li>Filter: 1PC</li>
                         <li>Ozonizer: 1pc</li>
-                        <li>Perimeter LED-verlichting: 24pcs</li>
-                        <li>Sprayverlichting: 8pcs</li>
-                        <li>LED bekerhouder: 2pcs</li>
+                        <li>Perimeter LED-verlichting: 18pcs</li>
                         <li>EVA hoofdkussen: 3pcs</li>
                         <li>Onderwaterverlichting: 5"*1pc</li>
                         <li>Luchtklep: 4pcs</li>
-                        <li>Waterverdeler: 1pc</li>
-                        <li>Waterval: 1pc</li>
-                        <li>2.5" pop-up fontein: 2pcs</li>
+                        <li>Waterverdeler: 2pcs</li>
+                        <li>Fontein: 3pcs</li>
                     </ul>
                     <h4>OPTIONEEL BALBOA CONTROL SYSTEM:</h4>
                     <ul>
